# structstore

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  PKGBUILD  README.md  pyproject.toml  requirements.txt  setup.py
cmake/: NanobindStubgen.cmake  StructStoreBindings.cmake  StructStoreConfig.cmake.in  StructStorePyConfig.cmake.in
examples/: CMakeLists.txt  example.cpp  example.hpp  example.py  example2.cpp  example_bytes.py  example_dyn.cpp  example_imviz.py  example_pybind.cpp
include/structstore/: structstore.hpp  stst_alloc.hpp  stst_bindings.hpp  stst_containers.hpp  stst_field.hpp  stst_hashstring.hpp  stst_lock.hpp  stst_py.hpp  stst_serialization.hpp  stst_shared.hpp  stst_stl_types.hpp  stst_structstore.hpp  stst_typing.hpp  stst_utils.hpp
lib/: structstore_utils.py
scripts/: build.sh  build_and_test.sh  build_config.sh  build_py.sh  build_pyproj.sh  devel_setup.sh  devel_test.sh  makepkg.sh  release.sh  setup_venv.sh  test.sh
src/: hashstring.hpp  mini_malloc.cpp  serialization.cpp  serialization.hpp  structstore.cpp  structstore.hpp  structstore_alloc.hpp  structstore_bindings.cpp  structstore_containers.cpp  structstore_containers.hpp  structstore_dyn.hpp  structstore_dyn_pybind.cpp  structstore_field.cpp  structstore_field.hpp  structstore_lock.hpp  structstore_py.cpp  structstore_pybind.cpp  structstore_pybind.hpp  structstore_python.hpp  structstore_serialization.cpp  structstore_shared.hpp  stst_alloc.cpp  stst_bindings.cpp  stst_callstack.cpp  stst_containers.cpp  stst_field.cpp  stst_fieldmap.cpp  stst_lock.cpp  stst_py.cpp  stst_shared.cpp  stst_structstore.cpp  stst_typing.cpp  stst_utils.cpp
src/include/structstore/: mini_malloc.hpp  structstore.hpp  stst_alloc.hpp  stst_callstack.hpp  stst_containers.hpp  stst_field.hpp  stst_fieldmap.hpp  stst_hashstring.hpp  stst_lock.hpp  stst_offsetptr.hpp  stst_py.hpp  stst_shared.hpp  stst_stl_types.hpp  stst_struct.hpp  stst_structstore.hpp  stst_typing.hpp  stst_utils.hpp
src/structstore/: __init__.py
tests/: CMakeLists.txt  DefineTests.cmake  example.py  example_imviz.py  mystruct0.cpp  mystruct0.hpp  mystruct0_py.cpp  mystruct1.cpp  mystruct1.hpp  test_alloc.cpp  test_basic_0.cpp  test_basic_0.py  test_basic_1.cpp  test_bytes_0.py  test_containers.py  test_failures_0.py  test_iter_0.py  test_lock_0.py  test_mystruct0.cpp  test_mystruct1.cpp  test_mystruct_0.py  test_offsetptr.cpp  test_pickle_0.py  test_shared_0.py  test_utils.cpp
